# storage/api-docs/api-docs.json
@@ -5,12 +5,149 @@
         "version": "0.1"
     },
     "paths": {
+        "/api/apartment-areas": {
+            "get": {
+                "tags": [
+                    "ApartmentAreas"
+                ],
+                "summary": "Get all apartment areas",
+                "responses": {
+                    "200": {
+                        "description": "Display a listing of apartment areas."
+                    }
+                }
+            }
+        },
+        "/api/apartment-areas/{id}": {
+            "get": {
+                "tags": [
+                    "ApartmentAreas"
+                ],
+                "summary": "Get a detail apartment-areas",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Display a apartment areas."
+                    }
+                }
+            }
+        },
+        "/api/apartment-areas/create": {
+            "post": {
+                "tags": [
+                    "ApartmentAreas"
+                ],
+                "summary": "Add a new apartment areas",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "floors": {
+                                        "type": "integer"
+                                    },
+                                    "address": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Add a new apartment areas"
+                    }
+                }
+            }
+        },
+        "/api/apartment-areas/{id}/update": {
+            "put": {
+                "tags": [
+                    "ApartmentAreas"
+                ],
+                "summary": "Update a apartment-areas",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path"
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "floors": {
+                                        "type": "integer"
+                                    },
+                                    "address": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Update a apartment areas"
+                    }
+                }
+            }
+        },
+        "/api/apartment-areas/{id}/delete": {
+            "delete": {
+                "tags": [
+                    "ApartmentAreas"
+                ],
+                "summary": "Delete a apartment-areas",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Delete a apartment areas."
+                    }
+                }
+            }
+        },
         "/api/apartment": {
             "get": {
                 "tags": [
                     "Apartment"
                 ],
                 "summary": "Get all apartments",
+                "parameters": [
+                    {
+                        "name": "apartment_areas",
+                        "in": "path"
+                    },
+                    {
+                        "name": "sortBy",
+                        "in": "path"
+                    },
+                    {
+                        "name": "sortOrder",
+                        "in": "path"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Display a listing of apartment."
@@ -115,12 +252,77 @@
                 }
             }
         },
-        "/api/apartment/{id}/change-resident": {
-            "patch": {
+        "/api/apartment/{id}/delete": {
+            "delete": {
                 "tags": [
                     "Apartment"
                 ],
-                "summary": "Change resident of a apartment",
+                "summary": "Delete a apartment",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Display a apartment."
+                    }
+                }
+            }
+        },
+        "/api/contract": {
+            "get": {
+                "tags": [
+                    "Contract"
+                ],
+                "summary": "Get all contracts",
+                "responses": {
+                    "200": {
+                        "description": "Display a listing of contract."
+                    }
+                }
+            }
+        },
+        "/api/contract/create": {
+            "post": {
+                "tags": [
+                    "Contract"
+                ],
+                "summary": "Add a new contract",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "resident_id": {
+                                        "type": "integer"
+                                    },
+                                    "apartment_id": {
+                                        "type": "integer"
+                                    },
+                                    "expired_at": {
+                                        "type": "date"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Add a new contract"
+                    }
+                }
+            }
+        },
+        "/api/contract/{id}/update": {
+            "put": {
+                "tags": [
+                    "Contract"
+                ],
+                "summary": "Update a contract",
                 "parameters": [
                     {
                         "name": "id",
@@ -134,6 +336,12 @@
                                 "properties": {
                                     "resident_id": {
                                         "type": "integer"
+                                    },
+                                    "apartment_id": {
+                                        "type": "integer"
+                                    },
+                                    "expired_at": {
+                                        "type": "date"
                                     }
                                 },
                                 "type": "object"
@@ -143,7 +351,26 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Change resident a apartment"
+                        "description": "Update a contract"
+                    }
+                }
+            }
+        },
+        "/api/contract/{id}/delete": {
+            "delete": {
+                "tags": [
+                    "Contract"
+                ],
+                "summary": "Delete a contract",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Delete a contract."
                     }
                 }
             }
@@ -266,6 +493,25 @@
                 "responses": {
                     "200": {
                         "description": "Update a resident"
+                    }
+                }
+            }
+        },
+        "/api/resident/{id}/delete": {
+            "delete": {
+                "tags": [
+                    "Resident"
+                ],
+                "summary": "Delete a resident",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Delete a resident."
                     }
                 }
             }
